# FTN_SIIT

./: vezba_1  vezba_1.py
AR/String/: pr_kol_zad1.S  pr_zad3.S  vvod i vivid.S  zad-2-1.S  zad_2.S  zad_3.S
AR/String/stek_podprogram/: readme.md  zad1_saberi.S  zad1_saberi_pp.S  zad2_nzd.c  zad2_nzd_pp.S  zad3_gl.c  zad3_pp.S  zad4_gl.c
NANS/Progect/: 20_21_CENTURY_ART.csv  Alan_and_Marianne_Schwartz.csv  Exquisite_Eye_hinese_Paintings.csv  Fine_Chinese_Modern_and_Contemporary_Ink_Paintings.csv  Graphic_Century.csv  MICA.csv  Middle_Eastern_Art.csv  Modern_and_Contemporary_Middle.csv  Old_Masters_Part_I.csv  Post-War_and_Contemporary_Art.csv  artworks_cleaned_all.csv  artworks_cleaned_train.csv  artworks_combined.csv  artworks_combined_eur.csv  parsing.py  readme.md
NANS/Progect/Data/: British and European Art_14dec.csv  Graphic Masterpieces by Rembrandt van Rijn - Part II.csv  Impressionist_and_Modern_Art_Day.csv  Marc_Chagall.csv  Maîtres_Anciens.csv  Modern_British_and_Irish.csv  Modern_works_on_paper.csv  Vivre_la_couleur.csv
NPEA/pr_to_kol/: adaDrad_primer.py  metod_Secice_Primer.py  nomer3.py  task1_my_NutonRapson  task1_my_NutonRapson.py  task2_metod_secice.py  task3_metodFibonaci.py  task4_metodZlatPresek.py  task5_metod_NajbrPad.py  task6_metod_NajbPadSaMomentom.py  task7_AdaGrad.py  task7_metod_ADAM.py
NPEA/projekt/: dokumentacija Avanesoves.docx  main.py  Отчет NPiEA.docx
Num_ALG/: pred_kol.py  prep_A1.py  prep_C2.py  prep_kol.py  zad2.py
OOP_2/: vezba_4.cpp  zadaci.md
OOP_2/Proekat_Labirint/: CMakeLists.txt  Character.h  FileManager.cpp  FileManager.h  Fog.h  Game.cpp  Game.h  GameIntegrationTest.cpp  GameIntegrationTest.h  GameTest.h  Hammer.h  Item.h  Labirint.cpp  LabirintTest.cpp  LabirintTest.h  Shield.h  Sword.h  gameTest_main.cpp  gameTest_main.h  game_result.txt  test_main.cpp  test_main.h
OOP_2/vezba_4/zadatok_1/: main.cpp  myComplex.cpp  myComplex.h
OOP_2/vezba_4/zadatok_2/: main.cpp  myComplex.cpp  (+1 more)
OOP_2/vezba_5/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp  myComplex.cpp  myComplex.h
SNUS/KLK1/: SNUS_klk1_IndustrialProcessingSystem.sln  readme.md
sim_4/OS/: atletika.cpp  banka.cpp  vez1.cpp  vez2.cpp  vez3_1.cpp  vez3_2(racuni)  vez3_3(kruznica).cpp  vez4_1.cpp  vez4_2.cpp  vez4_3.cpp  vez4_4.cpp  vez4_5.cpp
sim_4/parall/: vz2_prim1.cpp  vz2_prim2_1.cpp  vz2_prim2_2_bezparal.cpp  vz5_integral.cpp
(+34 files in other folders)
